--- a/src/components/tela-plano/styles.css
+++ b/src/components/tela-plano/styles.css
@@ -6,6 +6,12 @@
     padding: 33px 38px;
 }
 
+.plano .icone ion-icon {
+    font-size: 32px;
+    color: #FFFFFF;
+    margin-bottom: 35px;
+}
+
 .plano .logo {
     width: 100%;
 
@@ -37,10 +43,20 @@
 .plano .dados-do-plano h1{
     font-size: 16px;
     margin-bottom: 10px;
+    display: flex;
+    gap: 5px;
+}
+.plano .dados-do-plano h1 ion-icon {
+    font-size: 14px;
+    color: #FF4791;
 }
 .plano .dados-do-plano h2 {
     font-size: 16px;
     margin:8px 0 5px 0;
+}
+.plano .dados-do-plano h2 ion-icon {
+    font-size: 14px;
+    color: #FF4791;
 }
 .plano .dados-do-plano .beneficio {
     font-weight: 400;
@@ -71,7 +87,7 @@
     display: flex;
     gap: 9px;
 }
-.plano button {
+.plano form button {
     width: 100%;
     height: 52px;
     border-radius: 8px;
@@ -83,4 +99,59 @@
     color: #FFFFFF;
 
     margin-top: 5px;
+}
+.plano .confirmacao {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: -33px -38px;
+    position: fixed;
+}
+.plano .pop-up {
+    width: 248px;
+    height: 210px;
+    background-color: #FFFFFF;
+    border-radius: 12px;
+    
+    font-family: "Roboto";
+    font-weight: 700;
+    font-size: 18px;
+    color: #000000;
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 33px 22px 11px 22px;
+}
+.plano .pop-up .botoes {
+    display: flex;
+    gap: 14px;
+}
+.plano .pop-up .botoes button {
+    width: 95px;
+    height: 52px;
+    border-radius: 8px;
+    border: none;
+
+    font-family: "Roboto";
+    font-size: 14px;
+    font-weight: 400;
+    color: #FFFFFF;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.plano .pop-up .botoes .nao {
+    background-color: #CECECE;
+}
+.plano .pop-up .botoes .sim {
+    background-color: #FF4791;
 }
