--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,8 @@
 }
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #0E0E13;
+    position: relative;
 }
 a {
     text-decoration: none;
